--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "mitt": "^3.0.0",
+        "primeflex": "^2.0.0",
+        "primeicons": "^5.0.0",
+        "primevue": "^3.10.0",
+        "vue-sweetalert2": "^5.0.2"
     }
 }
